# Sebae

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.toml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
backend/: __init__.py  app_backend.py  biz_backend.py  disinfection_backend.py  maint_backend.py  waterlift_backend.py
core/: __init__.py  graph.py  hydraulics.py  installation.py  pump.py  schemas.py
database/: __init__.py  db.py  models.py  seed_data.py
qml/: main.qml
qml/Modules/Biz/: ArticleDetail.qml  BizWindow.qml  ProjectDetail.qml
qml/Modules/Common/: Combo.qml  DataTable.qml  Func.qml  Num.qml  Txt.qml
qml/Modules/Disinfection/: .gitkeep  DisinfectionWindow.qml  EquipmentInjectionPointChlorine.qml  FrameChlorineGas.qml  FrameDosing.qml  InjectionPoint.qml  MainDisinfection.qml
qml/Modules/Disinfection/img/: .gitkeep
qml/Modules/Maintenance/: ClientDetail.qml  ContactDetail.qml  ContractDetail.qml  ContractTypesSettings.qml  MachineDetail.qml  MaintenanceWindow.qml  StatusBadge.qml
qml/Modules/WaterLift/: .gitkeep  ColAccess.qml  ColProject.qml  ColPump.qml  WL.qml  WaterLift.qml  WaterLift2.qml  WaterliftWindow.qml  WinCabinet.qml  WinPumpingStation.qml
qml/Modules/WaterLift/images/: .gitkeep
qml/Windows/: AdminWindow.qml  DisinfectionWindow.qml  NewEntry.qml  OpenProject.qml  WaterLiftWindow.qml
reports/: __init__.py  print_report.py
tests/: __init__.py  conftest.py  test_core.py  test_database.py
