[project]
name = "Sebae"
version = "0.2.0"

[tool.pyside6-project]
files = [
    "backend/app_backend.py",
    "backend/biz_backend.py",
    "backend/maint_backend.py",
    "config.toml",
    "core/graph.py",
    "core/hydraulics.py",
    "core/installation.py",
    "core/pump.py",
    "database/db.py",
    "database/models.py",
    "main.py",
    "qml/Modules/Biz/ArticleDetail.qml",
    "qml/Modules/Biz/BizWindow.qml",
    "qml/Modules/Biz/ProjectDetail.qml",
    "qml/Modules/Common/Combo.qml",
    "qml/Modules/Common/DataTable.qml",
    "qml/Modules/Common/Func.qml",
    "qml/Modules/Common/Num.qml",
    "qml/Modules/Common/Txt.qml",
    "qml/Modules/Maintenance/ClientDetail.qml",
    "qml/Modules/Maintenance/ContactDetail.qml",
    "qml/Modules/Maintenance/ContractDetail.qml",
    "qml/Modules/Maintenance/ContractTypesSettings.qml",
    "qml/Modules/Maintenance/MachineDetail.qml",
    "qml/Modules/Maintenance/MaintenanceWindow.qml",
    "qml/Modules/Maintenance/StatusBadge.qml",
    "qml/Windows/AdminWindow.qml",
    "qml/Windows/DisinfectionWindow.qml",
    "qml/Windows/NewEntry.qml",
    "qml/Windows/OpenProject.qml",
    "qml/Windows/WaterLiftWindow.qml",
    "qml/main.qml",
    "reports/print_report.py",
]
